--- a/index.html
+++ b/index.html
@@ -2,42 +2,59 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Q-Test</title>
+  <title>Registro</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: linear-gradient(135deg, #f5e7da 0%, #cbb092 100%);
+      background: linear-gradient(135deg, #e0d3c2 0%, #bfa07a 100%);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       font-family: 'Segoe UI', sans-serif;
     }
-    h1 {
-      font-size: 4rem;
+    h2 {
       color: #996644;
-      margin-bottom: 40px;
-      letter-spacing: 2px;
+      font-size: 2.5rem;
+      margin-bottom: 30px;
       animation: fadeInDown 1s;
     }
+    .input-nick {
+      width: 350px;
+      height: 55px;
+      background-color: #e0e0e0;
+      border: none;
+      color: #643a26;
+      font-size: 2rem;
+      border-radius: 25px;
+      outline: none;
+      text-align: center;
+      margin-bottom: 30px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      transition: box-shadow 0.2s;
+      animation: fadeInUp 1s;
+    }
+    .input-nick:focus {
+      box-shadow: 0 4px 16px rgba(153,102,68,0.2);
+    }
     .botao-go {
-      width: 160px;
-      height: 70px;
+      width: 140px;
+      height: 55px;
       background-color: #996644;
       color: white;
-      font-size: 2rem;
+      font-size: 1.5rem;
       border: none;
       border-radius: 20px;
       cursor: pointer;
       box-shadow: 0 4px 16px rgba(0,0,0,0.2);
       transition: transform 0.2s, background 0.2s;
-      animation: fadeInUp 1s;
+      animation: fadeInUp 1.2s;
     }
     .botao-go:hover {
       background: #7a4f27;
-      transform: scale(1.08);
+      transform: scale(1.05);
     }
     @keyframes fadeInDown {
       from { opacity: 0; transform: translateY(-40px);}
@@ -47,15 +64,36 @@
       from { opacity: 0; transform: translateY(40px);}
       to { opacity: 1; transform: translateY(0);}
     }
+    .erro {
+      color: #c0392b;
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+      display: none;
+    }
   </style>
   <script>
-    function aoClicarGo() {
-      window.location.href = 'nome.html';
+    function registrarNome() {
+      const input = document.getElementById('nick');
+      const erro = document.getElementById('erro');
+      if (input.value.trim().length < 3) {
+        erro.style.display = 'block';
+        erro.textContent = 'Digite um nome válido (mínimo 3 letras)';
+        input.focus();
+        return false;
+      }
+      localStorage.setItem('usuario_nome', input.value.trim());
+      window.location.href = 'categorias.html';
+      return false;
     }
   </script>
 </head>
 <body>
-  <h1>Q-Test</h1>
-  <button class="botao-go" onclick="aoClicarGo()">Começar</button>
+  <h2>Digite seu nome para começar</h2>
+  <div id="erro" class="erro"></div>
+  <form onsubmit="return registrarNome()">
+    <input type="text" id="nick" class="input-nick" placeholder="Seu nome..." maxlength="20" autocomplete="off" />
+    <br>
+    <button class="botao-go" type="submit">Entrar</button>
+  </form>
 </body>
 </html>
