--- a/selectcategoria.html
+++ b/selectcategoria.html
@@ -8,19 +8,42 @@
       margin: 0; padding: 0; height: 100%; overflow: hidden;
     }
 
-    body {
-      background: url('Mostrar uma categoria.png') no-repeat center center;
-      background-size: cover;
-      position: relative;
-    }
+  body {
+  background: url('Mostrar uma categoria.png') no-repeat center center fixed;
+  background-size: 100vw 100vh;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
     .layout {
         max-width: 100%;
         max-height: 100%;
         object-fit: contain;
     }
-    /* Campo texto invisível */
+    .botao-go {
+  position: absolute;
+  top: 90%; /* Ajuste baseado na posição do botão na imagem */
+  left: 47.5%; /* Centralizado aproximadamente */
+  width: 80px;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0); /* transparente */
+  border: none;
+  cursor: pointer;
+}
 
-    /* Botão invisível */
+.botao-go {
+  position: absolute;
+  top: 90%; /* Ajuste baseado na posição do botão na imagem */
+  left: 47.5%; /* Centralizado aproximadamente */
+  width: 80px;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0); /* transparente */
+  border: none;
+  cursor: pointer;
+}
+
+
 
   </style>
 </head>
