--- a/quiz.html
+++ b/quiz.html
@@ -119,7 +119,7 @@
   <div class="resultado" id="resultado"></div>
   <div class="botoes-finais" id="botoes-finais" style="display:none;">
     <button onclick="verRanking()">Ver Ranking Global</button>
-    <button onclick="irHome()">Home</button>
+    <button onclick="irHome()">Inicio</button>
   </div>
   <script>
     // Exemplo de quizzes
@@ -163,8 +163,16 @@
             resposta: 2
           }
         ]
+      },
+      paises: {
+        mundiais: [
+          {
+            pergunta: "Quantas Copas do Mundo o Brasil ganhou?",
+            opcoes: ["3", "4", "5", "6"],
+            resposta: 2
+          }
+        ]
       }
-      // Adicione mais quizzes e perguntas conforme desejar
     };
 
     // Pega categoria e quiz da URL
@@ -217,7 +225,7 @@
     }
 
     function irHome() {
-      window.location.href = "index.html";
+      window.location.href = "categorias.html";
     }
 
     function verRanking() {
@@ -232,10 +240,25 @@
         ranking = JSON.parse(localStorage.getItem(key)) || [];
       } catch {}
       ranking.push({ nome: usuario, pontos: acertos, total: quiz.length, data: new Date().toISOString() });
-      // Mantém só os 20 melhores
+      
       ranking = ranking.sort((a, b) => b.pontos - a.pontos).slice(0, 20);
       localStorage.setItem(key, JSON.stringify(ranking));
     }
-
+    
+  function salvarPontuacao() {
+  const usuario = localStorage.getItem('usuario_nome') || 'Usuário';
+  const categoria = params.get('categoria') || 'filmes';
+  const quizId = params.get('quiz') || 'harrypotter';
+  const pontos = acertos;
+  const total = quiz.length;
+  const key = `ranking_${categoria}_${quizId}`;
+  let ranking = [];
+  try {
+    ranking = JSON.parse(localStorage.getItem(key)) || [];
+  } catch {}
+  ranking.push({ nome: usuario, pontos, total, data: new Date().toISOString() });
+  ranking = ranking.sort((a, b) => b.pontos - a.pontos).slice(0, 20); // top 20
+  localStorage.setItem(key, JSON.stringify(ranking));
+}
     mostrarPergunta();
   </script>
