--- a/categorias.html
+++ b/categorias.html
@@ -9,11 +9,34 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: linear-gradient(135deg, #f5e7da 0%, #cbb092 100%);
-      font-family: 'Roboto', Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
+      background: none;
+      position: relative;
+      overflow-y: auto; 
+      overflow-x: hidden; 
+      font-family: 'Roboto', Arial, sans-serif;
+      scroll-behavior: smooth; 
+    }
+    .bg-animada {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 0;
+      background: linear-gradient(135deg, rgba(255,80,80,0.80) 0%, rgba(200,40,40,0.80) 100%);
+    }
+    .bg-img {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 1;
+      background: url('image.png') repeat-x center center/cover;
+      opacity: 0.35;
+      animation: mover-bg 30s linear infinite;
+      pointer-events: none;
+    }
+    @keyframes mover-bg {
+      0% { background-position-x: 0; }
+      100% { background-position-x: 1000px; }
     }
     .usuario-nome {
       position: fixed;
@@ -21,7 +44,7 @@
       right: 40px;
       font-family: 'Montserrat', Arial, sans-serif;
       font-size: 1.3rem;
-      color: #996644;
+      color: #994444;
       background: #fff8f0;
       padding: 10px 28px;
       border-radius: 22px;
@@ -37,7 +60,7 @@
     }
     .banner {
       width: 100%;
-      background: linear-gradient(90deg, #996644 60%, #cbb092 100%);
+      background: linear-gradient(90deg, #b22222 60%, #c0392b 100%);
       color: #fff;
       padding: 40px 0 30px 0;
       text-align: center;
@@ -46,6 +69,8 @@
       letter-spacing: 2px;
       box-shadow: 0 4px 16px rgba(0,0,0,0.08);
       margin-bottom: 40px;
+      z-index: 2;
+      position: relative;
     }
     .categorias-container {
       display: flex;
@@ -55,39 +80,42 @@
       margin-top: 30px;
       width: 90vw;
       max-width: 1200px;
+      z-index: 2;
+      position: relative;
+      padding-bottom: 60px; 
     }
-   /* ...existing code... */
-.categoria-card {
-  background: #fff;
-  border-radius: 25px;
-  box-shadow: 0 6px 24px rgba(153,102,68,0.15);
-  width: 320px;         /* aumente a largura */
-  height: 220px;        /* aumente a altura */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Montserrat', Arial, sans-serif;
-  font-size: 2.3rem;    /* aumente o tamanho da fonte */
-  color: #996644;
-  cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
-  position: relative;
-  overflow: hidden;
-}
-
+    .categoria-card {
+      background: #fff;
+      border-radius: 25px;
+      box-shadow: 0 6px 24px rgba(178,34,34,0.15);
+      width: 320px;
+      height: 220px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Montserrat', Arial, sans-serif;
+      font-size: 2.3rem;
+      color: #b22222;
+      cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
+      position: relative;
+      overflow: hidden;
+    }
     .categoria-card:hover {
-      transform: scale(1.06);
-      box-shadow: 0 12px 32px rgba(153,102,68,0.25);
-      background: linear-gradient(135deg, #f5e7da 0%, #e7c9a9 100%);
+    transform: scale(1.04);
+      box-shadow: 0 12px 32px rgba(0,0,0,0.25);
+      background: linear-gradient(135deg, #ffe6e6 0%, #ffc2c2 100%);
     }
-    .categoria-icone {
+      .categoria-icone {
       font-size: 3.5rem;
       margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
+  <div class="bg-animada"></div>
+  <div class="bg-img"></div>
   <div class="usuario-nome" id="usuario-nome">
     <span class="perfil-icone">👤</span>
     <span id="usuario-nome-texto"></span>
@@ -131,7 +159,7 @@
     function irParaQuizzes(categoria) {
       window.location.href = `quizzes.html?categoria=${categoria}`;
     }
-    // Exibe nome do usuário no topo direito
+    //icone no topo direito
     const usuario = localStorage.getItem('usuario_nome') || 'Usuário';
     document.getElementById('usuario-nome-texto').textContent = usuario;
   </script>
