--- a/index.html
+++ b/index.html
@@ -8,35 +8,61 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: linear-gradient(135deg, #f5e7da 0%, #cbb092 100%);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       font-family: 'Segoe UI', sans-serif;
+      position: relative;
+      overflow: hidden;
+    }
+    .bg-animada {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 0;
+      background: 
+        linear-gradient(135deg, rgba(255,80,80,0.80) 0%, rgba(200,40,40,0.80) 100%);
+    }
+    .bg-img {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 1;
+      background: url('image.png') repeat-x center center/cover;
+      opacity: 0.35;
+      animation: mover-bg 30s linear infinite;
+      pointer-events: none;
+    }
+    @keyframes mover-bg {
+      0% { background-position-x: 0; }
+      100% { background-position-x: 1000px; }
     }
     h1 {
       font-size: 4rem;
-      color: #996644;
+      color: #ffffff;
       margin-bottom: 40px;
       letter-spacing: 2px;
       animation: fadeInDown 1s;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.10);
+      z-index: 2;
+      position: relative;
     }
     .botao-go {
       width: 160px;
       height: 70px;
-      background-color: #996644;
+      background-color: #b22222;
       color: white;
       font-size: 2rem;
       border: none;
       border-radius: 20px;
       cursor: pointer;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 16px rgba(178,34,34,0.18);
       transition: transform 0.2s, background 0.2s;
       animation: fadeInUp 1s;
+      z-index: 2;
+      position: relative;
     }
     .botao-go:hover {
-      background: #7a4f27;
+      background: #8b1a1a;
       transform: scale(1.08);
     }
     @keyframes fadeInDown {
@@ -55,7 +81,9 @@
   </script>
 </head>
 <body>
+  <div class="bg-animada"></div>
+  <div class="bg-img"></div>
   <h1>Q-Test</h1>
-  <button class="botao-go" onclick="aoClicarGo()">Começar</button>
+  <button class="botao-go" onclick="aoClicarGo()">Go</button>
 </body>
-</html>
+</html> 
