--- a/nome.html
+++ b/nome.html
@@ -8,25 +8,48 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: linear-gradient(135deg, #e0d3c2 0%, #bfa07a 100%);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       font-family: 'Segoe UI', sans-serif;
+      position: relative;
+      overflow: hidden;
+    }
+    .bg-animada {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 0;
+      background: linear-gradient(135deg, rgba(255,80,80,0.80) 0%, rgba(200,40,40,0.80) 100%);
+    }
+    .bg-img {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 1;
+      background: url('image.png') repeat-x center center/cover;
+      opacity: 0.35;
+      animation: mover-bg 30s linear infinite;
+      pointer-events: none;
+    }
+    @keyframes mover-bg {
+      0% { background-position-x: 0; }
+      100% { background-position-x: 1000px; }
     }
     h2 {
-      color: #996644;
+      color: #fff;
       font-size: 2.5rem;
       margin-bottom: 30px;
       animation: fadeInDown 1s;
+      z-index: 2;
+      position: relative;
+      text-shadow: 0 2px 8px rgba(178,34,34,0.18);
     }
     .input-nick {
       width: 350px;
       height: 55px;
-      background-color: #e0e0e0;
+      background-color: #fff8f0;
       border: none;
-      color: #643a26;
+      color: #b22222;
       font-size: 2rem;
       border-radius: 25px;
       outline: none;
@@ -35,25 +58,29 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.08);
       transition: box-shadow 0.2s;
       animation: fadeInUp 1s;
+      z-index: 2;
+      position: relative;
     }
     .input-nick:focus {
-      box-shadow: 0 4px 16px rgba(153,102,68,0.2);
+      box-shadow: 0 4px 16px rgba(178,34,34,0.2);
     }
     .botao-go {
       width: 140px;
       height: 55px;
-      background-color: #996644;
+      background-color: #b22222;
       color: white;
       font-size: 1.5rem;
       border: none;
       border-radius: 20px;
       cursor: pointer;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 16px rgba(178,34,34,0.18);
       transition: transform 0.2s, background 0.2s;
       animation: fadeInUp 1.2s;
+      z-index: 2;
+      position: relative;
     }
     .botao-go:hover {
-      background: #7a4f27;
+      background: #8b1a1a;
       transform: scale(1.05);
     }
     @keyframes fadeInDown {
@@ -65,10 +92,16 @@
       to { opacity: 1; transform: translateY(0);}
     }
     .erro {
-      color: #c0392b;
+      color: #fff;
+      background: rgba(178,34,34,0.85);
       margin-bottom: 10px;
       font-size: 1.1rem;
       display: none;
+      padding: 8px 18px;
+      border-radius: 14px;
+      z-index: 2;
+      position: relative;
+      box-shadow: 0 2px 8px rgba(178,34,34,0.10);
     }
   </style>
   <script>
@@ -88,12 +121,11 @@
   </script>
 </head>
 <body>
+  <div class="bg-animada"></div>
+  <div class="bg-img"></div>
   <h2>Digite seu nome para começar</h2>
   <div id="erro" class="erro"></div>
   <form onsubmit="return registrarNome()">
     <input type="text" id="nick" class="input-nick" placeholder="Seu nome..." maxlength="20" autocomplete="off" />
     <br>
     <button class="botao-go" type="submit">Entrar</button>
-  </form>
-</body>
-</html>
