--- a/ranking.html
+++ b/ranking.html
@@ -8,24 +8,48 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: linear-gradient(135deg, #f5e7da 0%, #cbb092 100%);
       font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: flex-start;
+      position: relative;
+      overflow: hidden;
+      color: #fff;
     }
+
+    .bg-animada {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 0;
+      background: linear-gradient(135deg, rgba(255,80,80,0.85) 0%, rgba(200,40,40,0.85) 100%);
+    }
+    .bg-img {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 1;
+      background: url('image.png') repeat-x center center/cover;
+      opacity: 0.35;
+      animation: mover-bg 30s linear infinite;
+      pointer-events: none;
+    }
+    @keyframes mover-bg {
+      0% { background-position-x: 0; }
+      100% { background-position-x: 1000px; }
+    }
+
     .usuario-nome {
       position: fixed;
       top: 18px;
       right: 40px;
       font-family: 'Montserrat', Arial, sans-serif;
       font-size: 1.3rem;
-      color: #996644;
-      background: #fff8f0;
+      color: #fff;
+      background: rgba(178,34,34,0.9);
       padding: 10px 28px;
       border-radius: 22px;
-      box-shadow: 0 2px 8px rgba(153,102,68,0.10);
-      z-index: 10;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      z-index: 2;
       letter-spacing: 1px;
       display: flex;
       align-items: center;
@@ -35,70 +59,103 @@
       font-size: 1.5rem;
     }
     h2 {
-      margin-top: 60px;
-      color: #996644;
+      margin-top: 80px;
+      color: #fff;
       font-size: 2.5rem;
       font-family: 'Montserrat', Arial, sans-serif;
+      z-index: 2;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
+
+    /* Container da tabela com rolagem */
+    #ranking-container {
+      max-height: 60vh;
+      overflow-y: auto;
+      width: 90vw;
+      max-width: 600px;
+      z-index: 2;
+    }
+
+    #ranking-container::-webkit-scrollbar {
+      width: 8px;
+    }
+    #ranking-container::-webkit-scrollbar-thumb {
+      background-color: rgba(178,34,34,0.7);
+      border-radius: 4px;
+    }
+
     table {
       margin-top: 30px;
       border-collapse: collapse;
-      width: 90vw;
-      max-width: 600px;
-      background: #fff;
+      width: 100%;
+      background: rgba(255,255,255,0.9);
       border-radius: 18px;
-      box-shadow: 0 4px 16px rgba(153,102,68,0.10);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.25);
       overflow: hidden;
+      z-index: 2;
     }
     th, td {
       padding: 18px;
       text-align: center;
       font-size: 1.2rem;
-      color: #996644;
+      color: #b22222;
       font-family: 'Roboto', Arial, sans-serif;
     }
     th {
-      background: #f5e7da;
+      background: rgba(255,230,230,0.9);
       font-size: 1.3rem;
     }
     tr:nth-child(even) {
-      background: #f9f3ed;
+      background: rgba(255,245,245,0.9);
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 14px 32px;
+      font-size: 1.1rem;
+      border-radius: 16px;
+      border: none;
+      background: #b22222;
+      color: #fff;
+      font-family: 'Montserrat', Arial, sans-serif;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      transition: background 0.2s, transform 0.2s;
+      z-index: 2;
+    }
+    button:hover {
+      background: #8b1a1a;
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
+  <div class="bg-animada"></div>
+  <div class="bg-img"></div>
+
   <div class="usuario-nome" id="usuario-nome">
     <span class="perfil-icone">👤</span>
     <span id="usuario-nome-texto"></span>
   </div>
   <h2>Ranking Global</h2>
-    <button onclick="voltarParaQuizzes()" style="
-        margin-top: 20px;
-        padding: 14px 32px;
-        font-size: 1.1rem;
-        border-radius: 16px;
-        border: none;
-        background: #996644;
-        color: #fff;
-        font-family: 'Montserrat', Arial, sans-serif;
-        cursor: pointer;
-        box-shadow: 0 2px 8px rgba(153,102,68,0.10);
-        transition: background 0.2s, transform 0.2s;
-        ">Voltar para Quizzes</button>
-  <table id="ranking-table">
-    <tr>
-      <th>Posição</th>
-      <th>Nome</th>
-      <th>Pontos</th>
-      <th>Data</th>
-    </tr>
-  </table>
+  <button onclick="voltarParaQuizzes()">Voltar para Quizzes</button>
+
+  <!-- Container com rolagem -->
+  <div id="ranking-container">
+    <table id="ranking-table">
+      <tr>
+        <th>Posição</th>
+        <th>Nome</th>
+        <th>Pontos</th>
+        <th>Data</th>
+      </tr>
+    </table>
+  </div>
+
   <script>
-    // Exibe nome do usuário no topo direito
     const usuario = localStorage.getItem('usuario_nome') || 'Usuário';
     document.getElementById('usuario-nome-texto').textContent = usuario;
 
-    // Pega categoria e quiz da URL
     const params = new URLSearchParams(window.location.search);
     const categoria = params.get('categoria') || 'filmes';
     const quizId = params.get('quiz') || 'harrypotter';
@@ -117,10 +174,11 @@
                       <td>${new Date(item.data).toLocaleDateString()}</td>`;
       table.appendChild(tr);
     });
+
     function voltarParaQuizzes() {
-  const categoria = new URLSearchParams(window.location.search).get('categoria') || 'filmes';
-  window.location.href = `categorias.html`;
-}
+      const categoria = new URLSearchParams(window.location.search).get('categoria') || 'filmes';
+      window.location.href = `categorias.html`;
+    }
   </script>
 </body>
 </html>
