--- a/quizzes.html
+++ b/quizzes.html
@@ -135,6 +135,15 @@
       paises: [
         { titulo: "Conhecimentos Gerais dos países", desc: "Quanto você sabe sobre os países?", id: "gerais" }
       ],
+      musica: [
+        { titulo: "Hits dos anos 2000", desc: "Você lembra dessas músicas?", id: "anos2000" }
+      ],
+      futebol: [
+        { titulo: "Copa do Mundo", desc: "Teste seus conhecimentos sobre a Copa!", id: "copa" }
+      ],
+      serie: [
+        { titulo: "Game of Thrones", desc: "Você é um verdadeiro fã de Westeros?", id: "got" }
+      ]
     };
 
     // Pega a categoria da URL
@@ -320,3 +329,4 @@
   </script>
 </body>
 </html>
+
