--- a/quiz.html
+++ b/quiz.html
@@ -242,6 +242,34 @@
             resposta: 1
           }
         ]
+      },
+      futebol: {
+        copa: [
+          { pergunta: "Qual país sediou a Copa do Mundo de 2014?",
+            opcoes: ["Brasil", "Alemanha", "África do Sul", "Rússia"],
+            resposta: 0
+          },
+          { pergunta: "Quem é o maior artilheiro da história das Copas do Mundo?",
+            opcoes: ["Pelé", "Miroslav Klose", "Ronaldo Fenômeno", "Gerd Müller"],
+            resposta: 1
+          },
+          { pergunta: "Qual país sediou a primeira Copa do Mundo de futebol em 1930?",
+            opcoes: ["Brasil", "Alemanha", "África do Sul", "Uruguai"],
+            resposta: 3
+          },
+          { pergunta: "Quem foi o artilheiro da Copa do Mundo de 2002?",
+            opcoes: ["Klose", "Ronaldo Fenômeno", "África do Sul", "Uruguai"],
+            resposta: 1
+          },
+          { pergunta: "Qual país foi campeão da Copa de 2018?",
+            opcoes: ["França", "Croácia", "Alemanha", "Brasil"],
+            resposta: 0
+          },
+          { pergunta: "Qual desses países nunca sediou uma Copa do Mundo?",
+            opcoes: ["México", "Espanha", "Inglaterra", "Portugal"],
+            resposta: 3
+          }
+        ]
       }
     };
 
@@ -312,3 +340,4 @@
   </script>
 </body>
 </html>
+
