--- a/quiz.html
+++ b/quiz.html
@@ -242,7 +242,35 @@
             resposta: 1
           }
         ]
-      }
+      },
+      serie: {
+        got: [
+          { pergunta: "Quem é o autor da série de livros 'As Crônicas de Gelo e Fogo', que inspirou 'Game of Thrones'?",
+            opcoes: ["J.R.R. Tolkien", "George R.R. Martin", "C.S. Lewis", "Patrick Rothfuss"],
+            resposta: 1
+          },
+          { pergunta: "Qual é o nome do lobo gigante de Jon Snow?",
+            opcoes: ["Ghost", "Nymeria", "Summer", "Shaggydog"],
+            resposta: 0
+          },
+          { pergunta: "Em Stranger Things, qual é o nome do mundo paralelo?",
+            opcoes: ["Dark Side", "O Outro Lado", "O Mundo Invertido", "O Mundo Paralelo"],
+            resposta: 2
+          },
+          { pergunta: "Qual é o apelido que a mídia dá a Dexter quando começam a suspeitar dele?",
+            opcoes: ["Ice Truck Killer", "The Brain Surgeon", "Bay Harbor Butcher", "The Butcher Of Miami"],
+            resposta: 2
+          },
+          { pergunta: "Quem foi o assassino de Marina na primeira temporada?",
+            opcoes: ["Guzmán", "Samuel", "Polo", "Nano"],
+            resposta: 2
+          },
+          { pergunta: "Qual cidade serve de refúgio para o grupo em várias temporadas?",
+            opcoes: ["Hilltop", "Alexandria", "Woodbury", "Kingdom"],
+            resposta: 1
+          }
+        ]
+      },
     };
 
     const params = new URLSearchParams(window.location.search);
@@ -312,3 +340,4 @@
   </script>
 </body>
 </html>
+
