--- a/quiz.html
+++ b/quiz.html
@@ -242,6 +242,51 @@
             resposta: 1
           }
         ]
+      },
+      musica: {
+        anos2000: [
+          { pergunta: "Onde surgiu a música na história da humanidade?",
+            opcoes: ["Em templos e rituais religiosos", "Nas fábricas", "Nas escolas", "Nas guerras"],
+            resposta: 0
+          },
+          { pergunta: "Qual música de Harry Styles explodiu nas paradas e se tornou um hino de autoestima?",
+            opcoes: ["Watermelon Sugar", "Adore You", "As It Was", "Sign of the Times"],
+            resposta: 2
+          },
+          { pergunta: "Quem é a cantora que ficou famosa com a música Good 4 U, que é um verdadeiro grito de desabafo pós-término?",
+            opcoes: ["Halsey", "Olivia Rodrigo", "Billie Eilish", "Ariana Grande"],
+            resposta: 1
+          },
+          { pergunta: "Qual rapper brasileiro fez história com o lançamento do álbum Xamã e se tornou um dos maiores nomes do rap nacional?",
+            opcoes: ["Emicida", "Matuê", "Djonga", "Xamã"],
+            resposta: 3
+          },
+          { pergunta: "Qual dessas músicas se tornou um sucesso mundial depois de viralizar no TikTok em 2021?",
+            opcoes: ["Stay - The Kid LAROI & Justin Bieber", "Levitating - Dua Lipa", "Industry Baby - Lil Nas X & Jack Harlow", "Save Your Tears - The Weeknd"],
+            resposta: 0
+          },
+
+          { pergunta: "Qual dessas músicas é um sucesso da cantora Billie Eilish?",
+            opcoes: ["Bad Guy", "Blinding Lights", "Watermelon Sugar", "Levitating"],
+            resposta: 0
+          },
+          { pergunta: "Quem ficou famoso com o hit Blinding Lights, uma das músicas mais ouvidas da década de 2020?",
+            opcoes: ["The Weeknd", "Drake", "Justin Bieber", "Post Malone"],
+            resposta: 0
+          },
+          { pergunta: "Qual dessas músicas é um sucesso da cantora Dua Lipa?",
+            opcoes: ["Levitating", "Good 4 U", "Bad Guy", "Watermelon Sugar"],
+            resposta: 0
+          },
+         { pergunta: "Qual dessas músicas de Doja Cat bombou nas redes sociais e se tornou um hit global em 2021?",
+            opcoes: ["Say So", "Streets", "Need to Know", "Kiss Me More"],
+            resposta: 3
+          },
+          { pergunta: "Quem foi o artista que deu a volta por cima em sua carreira com a música Peaches, fazendo uma parceria com Daniel Caesar e Giveon??",
+            opcoes: ["Drake", "Justin Bieber", "Shawn Mendes", "Post Malone"],
+            resposta: 1
+          }
+        ]
       }
     };
 
@@ -312,3 +357,4 @@
   </script>
 </body>
 </html>
+
