--- a/quizzes.html
+++ b/quizzes.html
@@ -136,7 +136,7 @@
         { titulo: "Conhecimentos Gerais dos países", desc: "Quanto você sabe sobre os países?", id: "gerais" }
       ],
       musica: [
-        { titulo: "Hits dos anos 2000", desc: "Você lembra dessas músicas?", id: "anos2000" }
+        { titulo: "Você conhece a história da música?", desc: " O quanto você conhece as origens das músicas?", id: "anos2000" }
       ],
       futebol: [
         { titulo: "Copa do Mundo", desc: "Teste seus conhecimentos sobre a Copa!", id: "copa" }
@@ -168,5 +168,6 @@
   </script>
 </body>
 </html>
+
 
 
