--- a/quizzes.html
+++ b/quizzes.html
@@ -135,14 +135,14 @@
       paises: [
         { titulo: "Conhecimentos Gerais dos países", desc: "Quanto você sabe sobre os países?", id: "gerais" }
       ],
-      musica: [
-        { titulo: "Hits dos anos 2000", desc: "Você lembra dessas músicas?", id: "anos2000" }
+      musicas: [
+        { titulo: "Você conhece a história da música?", desc: " O quanto você conhece as origens das músicas?", id: "anos2000" }
       ],
-      futebol: [
+     futebol: [
         { titulo: "Copa do Mundo", desc: "Teste seus conhecimentos sobre a Copa!", id: "copa" }
       ],
-      serie: [
-        { titulo: "Game of Thrones", desc: "Você é um verdadeiro fã de Westeros?", id: "got" }
+     series: [
+        { titulo: "Tela e Pipoca: Quiz para Amantes de Séries", desc: "Você é um verdadeiro fã de Séries?", id: "got" }
       ]
     };
 
@@ -168,3 +168,7 @@
   </script>
 </body>
 </html>
+
+
+<!DOCTYPE html><html lang="pt-br">
+<head>
