--- a/quiz.html
+++ b/quiz.html
@@ -299,7 +299,7 @@
     }
 
     function irHome() {
-      window.location.href = "categorias.html";
+      window.location.href = `quizzes.html?categoria=${categoria}&quiz=${quizId}`;
     }
 
     function verRanking() {
@@ -319,3 +319,4 @@
   </script>
 </body>
 </html>
+
