--- a/quiz.html
+++ b/quiz.html
@@ -189,7 +189,7 @@
   <div class="resultado" id="resultado"></div>
   <div class="botoes-finais" id="botoes-finais" style="display:none;">
     <button onclick="verRanking()">Ver Ranking Global</button>
-    <button onclick="irHome()">Inicio</button>
+    <button onclick="irHome()">Voltar</button>
   </div>
 
   <script>
@@ -319,4 +319,5 @@
   </script>
 </body>
 </html>
+
 
