--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Quiz</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="quiz.css" rel="stylesheet">
 </head>
 <body>
