--- a/categorias.html
+++ b/categorias.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Categorias</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="categorias.css" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -164,4 +165,5 @@
     document.getElementById('usuario-nome-texto').textContent = usuario;
   </script>
 </body>
+
 </html>
