--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Q-Test</title>
+  <link href="index.css" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -87,3 +88,4 @@
   <button class="botao-go" onclick="aoClicarGo()">Go</button>
 </body>
 </html> 
+
