--- a/quizzes.html
+++ b/quizzes.html
@@ -4,115 +4,7 @@
   <meta charset="UTF-8">
   <title>Quizzes</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      font-family: 'Roboto', Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      color: #fff;
-    }
-
-    .bg-animada {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      z-index: 0;
-      background: linear-gradient(135deg, rgba(255,80,80,0.85) 0%, rgba(200,40,40,0.85) 100%);
-    }
-    .bg-img {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      z-index: 1;
-      background: url('image.png') repeat-x center center/cover;
-      opacity: 0.35;
-      animation: mover-bg 30s linear infinite;
-      pointer-events: none;
-    }
-    @keyframes mover-bg {
-      0% { background-position-x: 0; }
-      100% { background-position-x: 1000px; }
-    }
-
-    #voltar-categorias {
-      position: fixed;
-      bottom: 30px;
-      left: 30px;
-      padding: 10px 28px;
-      border-radius: 18px;
-      border: none;
-      background: #cc0000;
-      color: #fff;
-      font-size: 1.1rem;
-      font-family: 'Montserrat', Arial, sans-serif;
-      cursor: pointer;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-      transition: background 0.2s;
-      z-index: 3;
-    }
-    #voltar-categorias:hover {
-      background: #a50000;
-    }
-
-    .banner {
-      width: 100%;
-      background: linear-gradient(90deg, #cc0000 60%, #ff4d4d 100%);
-      color: #fff;
-      padding: 40px 0 30px 0;
-      text-align: center;
-      font-family: 'Montserrat', Arial, sans-serif;
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.2);
-      margin-bottom: 40px;
-      z-index: 3;
-      position: relative;
-    }
-
-    .quizzes-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-      justify-content: center;
-      margin-top: 30px;
-      width: 90vw;
-      max-width: 1000px;
-      z-index: 3;
-      position: relative;
-    }
-    .quiz-card {
-      background: #fff;
-      border-radius: 25px;
-      box-shadow: 0 6px 24px rgba(0,0,0,0.15);
-      width: 320px;
-      height: 140px;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: center;
-      font-family: 'Montserrat', Arial, sans-serif;
-      font-size: 1.5rem;
-      color: #cc0000;
-      cursor: pointer;
-      transition: transform 0.2s, box-shadow 0.2s;
-      padding: 30px 40px;
-      position: relative;
-      overflow: hidden;
-    }
-    .quiz-card:hover {
-      transform: scale(1.04);
-      box-shadow: 0 12px 32px rgba(0,0,0,0.25);
-      background: linear-gradient(135deg, #ffe6e6 0%, #ffc2c2 100%);
-    }
-    .quiz-desc {
-      font-size: 1.1rem;
-      color: #a50000;
-      margin-top: 10px;
-      font-family: 'Roboto', Arial, sans-serif;
-    }
-  </style>
+  <link href="ranking.css" rel="stylesheet">
 </head>
 <body>
   <div class="bg-animada"></div>
@@ -170,3 +62,4 @@
   </script>
 </body>
 </html>
+
