--- a/quizzes.html
+++ b/quizzes.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Quizzes</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <link href="ranking.css" rel="stylesheet">
+  <link href="quizzes.css" rel="stylesheet">
 </head>
 <body>
   <div class="bg-animada"></div>
@@ -62,4 +62,5 @@
   </script>
 </body>
 </html>
+
 
